Add Security Management module with setup, trade, and ledger functionalities
- Created workspace configuration for the Security Management module.
- Added app.json with updated version and application settings.
- Implemented Securities Setup table and page for managing securities.
- Developed Trade table and card for handling trade transactions.
- Introduced Security Ledger Entry table for tracking security transactions.
- Added permissionset for security-related operations.
- Included ISIN Code and Security Account tables with corresponding pages.
- Implemented functionality for FX revaluation of securities.
- Added translations for Danish language support.
- Removed obsolete HelloWorld.al file.
- Updated launch configuration for development environment.
- Added README for module documentation.
"""

--- a/Security Management/app.json
+++ b/Security Management/app.json
@@ -2,7 +2,7 @@
   "id": "564fc158-61c3-4eca-b68f-76eabc1cd8be",
   "name": "Security Management",
   "publisher": "Fich & Kretzmann ApS",
-  "version": "1.0.0.0",
+  "version": "1.0.0.1",
   "brief": "",
   "description": "",
   "privacyStatement": "",
@@ -13,7 +13,7 @@
   "dependencies": [],
   "screenshots": [],
   "platform": "1.0.0.0",
-  "application": "22.0.0.0",
+  "application": "25.0.0.0",
   "idRanges": [
     {
       "from": 79900,
@@ -21,11 +21,13 @@
     }
   ],
   "features": [
-    "NoImplicitWith"
+    "NoImplicitWith","TranslationFile"
   ],
   "resourceExposurePolicy": {
     "allowDebugging": true,
     "allowDownloadingSource": false,
     "includeSourceInSymbolFile": false
-  }
+  },
+  "resourceFolders": [".resources"],
+  "runtime": "15.0"
 }
